[Cleanup] Resolve maven version overrides, project encoding warnings, and Java deprecated constructor usages